--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -171,3 +171,14 @@ background-color: #f2edfc !important;
   height: 35px;
   object-fit: contain;
 }
+
+/* Remove number input spinners across all browsers */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
